[gd_scene load_steps=9 format=3 uid="uid://cwwwb62f1o11r"]

[ext_resource type="Script" uid="uid://brhdalnqii0vr" path="res://ui/floating/name_plate.gd" id="1_ypi3l"]
[ext_resource type="Texture2D" uid="uid://bipur35feflj7" path="res://assets/Wenrexa Interface UI KIT #4/PNG/ProgressBar_06/BarV6_Bar.png" id="2_77olu"]
[ext_resource type="Texture2D" uid="uid://dhuhtlyuulk14" path="res://assets/Wenrexa Interface UI KIT #4/PNG/ProgressBar_05/BarV5_ProgressBar.png" id="3_pnfrq"]
[ext_resource type="Texture2D" uid="uid://dqxr64jju4npg" path="res://assets/Wenrexa Interface UI KIT #4/PNG/Panel04.png" id="4_spl47"]
[ext_resource type="Texture2D" uid="uid://dupgo4uao7147" path="res://assets/Wenrexa Interface UI KIT #4/PNG/Icons/Circle02.png" id="5_6pvrs"]

[sub_resource type="LabelSettings" id="LabelSettings_f22a0"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w6i3i"]
font_size = 66
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dyiin"]
font_size = 30

[node name="Background" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_right = 519.0
offset_bottom = 200.0
grow_horizontal = 2
scale = Vector2(0.26, 0.26)
script = ExtResource("1_ypi3l")

[node name="Health" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -289.125
offset_top = -56.25
offset_right = -17.125
offset_bottom = -10.25
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.13, 1)
nine_patch_stretch = true
texture_under = ExtResource("2_77olu")
texture_progress = ExtResource("3_pnfrq")

[node name="NameBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 12.0
offset_right = 287.5
offset_bottom = 61.0
grow_horizontal = 2
texture = ExtResource("4_spl47")

[node name="NameLabel" type="Label" parent="NameBG"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 438.0
offset_bottom = 52.0
text = "Player"
label_settings = SubResource("LabelSettings_f22a0")

[node name="LevelBG" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 6.25
offset_top = 6.25
offset_right = 136.25
offset_bottom = 136.25
texture = ExtResource("5_6pvrs")

[node name="LevelLabel" type="Label" parent="LevelBG"]
layout_mode = 0
offset_left = 7.5
offset_top = 3.625
offset_right = 120.5
offset_bottom = 128.625
text = "100"
label_settings = SubResource("LabelSettings_w6i3i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthText" type="Label" parent="."]
layout_mode = 0
offset_left = 10.5264
offset_top = 147.0
offset_right = 587.526
offset_bottom = 187.0
text = "100/100"
label_settings = SubResource("LabelSettings_dyiin")
horizontal_alignment = 1
vertical_alignment = 1
